--- a/.npmignore
+++ b/.npmignore
@@ -1,14 +1,14 @@
-# dependencies
+# Dependencies
 /node_modules
 
-# testing
-/tests
+# Testing
+/test
 /coverage
 
-# docs
+# Docs
 /docs
 
-# misc
+# Misc
 .DS_Store
 .env.local
 .env.development.local
@@ -22,13 +22,21 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+# Demo and examples
+/demo
+
 # Development folders and files
 public
 src
-scripts
+script
 config
-.travis.yml
 CHANGELOG.md
 README.md
 webpack.config.js
-babel.config.js
+
+.travis.yml
+.npmignore
+.eslintrc
+.editorconfig
+.babelrc
+.stylelintrc
