--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "url": "https://github.com/viaeoo/datepick/issues"
   },
   "keywords": [
-    "date",
-    "picker",
+    "datepick",
+    "datepicker",
     "calendar"
   ],
   "author": "viaeoo",
