--- a/package.json
+++ b/package.json
@@ -78,6 +78,10 @@
       "git add"
     ]
   },
+  "browserslist": [
+    "last 2 version",
+    "ie 11"
+  ],
   "standard-version": {
     "types": [
       {
