--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/polyfill": "^7.8.7",
     "@babel/preset-env": "^7.9.6",
+    "@babel/preset-typescript": "^7.9.0",
     "babel-loader": "^8.1.0",
     "babel-preset-minify": "^0.5.1",
     "cross-env": "^7.0.2",
@@ -57,6 +58,8 @@
     "stylelint-config-standard": "^20.0.0",
     "stylelint-scss": "^3.17.1",
     "stylelint-webpack-plugin": "^1.2.3",
+    "ts-loader": "^7.0.4",
+    "typescript": "^3.9.2",
     "url-loader": "^4.1.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
