--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "build:prod": "cross-env NODE_ENV=production webpack",
     "dev": "webpack-dev-server",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint --ext .js --ignore-path .gitignore .",
-    "lint:fix": "eslint --fix --ext .js --ignore-path .gitignore .",
+    "lint": "eslint --ext [.js,.ts] --ignore-path .gitignore .",
+    "lint:fix": "eslint --fix --ext [.js,.ts] --ignore-path .gitignore .",
     "lint:scss": "stylelint **/*.scss --syntax scss --fix",
     "prepare": "npm run build:prod",
     "precommit": "lint-staged",
@@ -40,6 +40,8 @@
     "@babel/polyfill": "^7.8.7",
     "@babel/preset-env": "^7.9.6",
     "@babel/preset-typescript": "^7.9.0",
+    "@typescript-eslint/eslint-plugin": "^2.34.0",
+    "@typescript-eslint/parser": "^2.34.0",
     "babel-loader": "^8.1.0",
     "babel-preset-minify": "^0.5.1",
     "cross-env": "^7.0.2",
