--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,8 @@
 {
+  "presets": [
+    "@babel/preset-env",
+    "@babel/preset-TypeScript"
+  ],
   "plugins": [
     "@babel/plugin-proposal-class-properties"
   ]
