Fix. TS 컴파일 설정 변경

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "declaration": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
+    "noImplicitAny": false,
     "baseUrl": ".",
     "paths": {
       "@src/*": ["src/ts/*"]
